<resources>
    <string name="app_name">Techcareer Chat App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_fragment_voice_type_cave">Yankı</string>
    <string name="chat_fragment_voice_type_robot">Robotik</string>
    <string name="chat_fragment_voice_type_reverse">Ters</string>
    <string name="chat_fragment_voice_type_vibration">Titreşimli</string>
    <string name="chat_fragment_voice_type_normal">Normal</string>
    <string name="logout">Çıkış Yap</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="password">Şifre</string>
    <string name="email">E-posta</string>
    <string name="login_hint">Giriş Yap</string>
    <string name="login_btn_text">Giriş Yap</string>
    <string name="sign_up_">Bir hesabın yok mu? Kayıt ol.</string>
    <string name="permission_btn">İzin ver</string>
    <string name="send_voice_message_hint">Bir sesli mesaj gönder...</string>
    <string name="create_user_title">Hesap Oluştur</string>
    <string name="sign_up_btn">Kayıt ol</string>
    <string name="login_">Zaten bir hesaabın var mı? Giriş Yap!</string>
    <string name="username_hint">Kullanıcı Adı</string>
</resources>